# ColorMapping

./: .gitignore  Limatesting.py  QandA.md  README.md  Reading.md  Roadmap.md  Todo.md  camera.py  camera2c.py  cameralink.sh  cameralive.py  cameralive2c.py  colormapping.py  colormappingbak.py  colorshoot.py  homeui.py  homeui.ui  image.npy  limatest.py  live.py  live_matplotlib.py  map.py  maplive.py  maptest.py  opencv.py  opengl.py  result.md  unit-test.py  window.py
Lima/include/: H5pubconf.h
Lima/lib/: libconfig++.la  libconfig++.so.9.1.3  libconfig.la  libconfig.so.9.1.3  libhdf5.la  libhdf5.settings  libhdf5.so.9.0.0  libhdf5_cpp.la  libhdf5_cpp.so.9  libhdf5_cpp.so.9.0.0  libhdf5_hl.la  libhdf5_hl.so.9  libhdf5_hl.so.9.0.0  libhdf5_hl_cpp.la  libhdf5_hl_cpp.so.9.0.0  liblimaandor3.so.1.7  liblimaandor3.so.1.7.1  liblimacore.so.1.7  liblimasimulator.so.1.7  liblimasimulator.so.1.7.0  libprocesslib.so.1.5  libprocesslib.so.1.5.1
Lima/lib/pkgconfig/: Lima.pc  libconfig++.pc  libconfig.pc
LiveFrameMode/: CMakeLists.txt  Install.md  LiveFrameSample.cpp  a.out  com.sh
QHYCCD/: CMakeLists.txt  README.md
QHYCCD/LiveFrameMode/: CMakeLists.txt  LiveFrameSample.cpp
QHYCCD/Player/: CMakeLists.txt  actionmap.cpp  actionmap.h  camera.cpp  camera.h  image.cpp  image.h  main.cpp  viewer.cpp  viewer.h
QHYCCD/Player/cmake_modules/: FindUSB-1.cmake  FindUSB-ARM.cmake
QHYCCD/Player/include/: qhycam.h
QHYCCD/SingleFrameMode/: CMakeLists.txt  SingleFrameMode.cpp
QHYCCD/WormPreview/: CMakeLists.txt  LiveFrameSample.cpp
QHYCCD/buildLive/: CMakeCache.txt  LiveFrameSampletest  Makefile  cmake_install.cmake
QHYCCD/common/: LiveFrameSample.cpp
QHYCCD/common/app4phone/: CMakeLists.txt  camip.cpp  cap.php  correctdatetime.cpp  gear.php  intercam.cpp  log4z.cpp  log4z.h  login.php  mpsse.c  planner.php  plannerinfo.php  querycamcmd.php  queryimagelog.php  querytemperature.php  resetcam.cpp  resetcam.h  scancam.cpp  scancam.php  status.php  updatecamcmd.php  updatestatus.php  view.php
QHYCCD/common/app4phone/superviserun/correctdatetime/: run
QHYCCD/common/app4phone/superviserun/ipserver/: run
QHYCCD/common/app4phone/superviserun/phoneserver/: run
QHYCCD/include/: qhyccd.h
doc/: demo.md  unit-test.py
doc/andor3doc/: unit-test.py
